Make sure that nodes stay visible

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,16 +216,16 @@ nav a {
 }
 
 .nodeMedium {
-  opacity: 0.1;
+  opacity: 0.3;
 }
 
 .nodeLow {
-  opacity: 0.1;
+  opacity: 0.3;
 
 }
 
 .nodeDead {
-  opacity: 0.1;
+  opacity: 0.3;
 
 }
 
